export default {
  no_record_found_text: 'No record found',
  ok_text: 'OK',
  movie_title: 'Movie Catch',
  trending_movies_title: 'Trending Movies',
  now_playing_movies_title: 'Now Playing Movies In India',
  top_rated_movies_title: 'Top Rated Movies',
  tv_title: 'TV Catch',
  trending_tv_title: 'Trending TV Shows',
  now_playing_tv_title: 'Now Playing TV Shows',
  top_rated_tv_title: 'Top Rated TV Shows',
  minutes_text: 'mins.',
  episode_text: 'episode',
  cast_title: 'Cast',
  more_title: 'More like this',
  videos_title: 'Teasers | Trailers',
  reviews_title: 'User reviews',
  about_title: 'More about',
  facebook_text: 'View on Facebook',
  imdb_text: 'View on IMDb',
  instagram_text: 'View on Instagram',
  twitter_text: 'View on Twitter',
  favorites_title: 'Favorites',
  add_favorite_item_text: 'Added to Favorites',
  remove_favorite_item_text: 'Removed from Favorites',
  settings_title: 'Settings',
  app_theme_title: 'App Theme',
  dark_theme: 'Dark',
  light_theme: 'Light',
  app_language_title: 'App Language',
  support_me_title: 'Support Me',
  success_text: 'Success',
  failure_text: 'Error',
};
